<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_directions"
        android:icon="@drawable/ic_menu_directions"
        android:showAsAction="ifRoom"
        android:title="@string/maps_get_directions_label"/>

    <item
        android:id="@+id/menu_details"
        android:icon="@drawable/ic_menu_building"
        android:showAsAction="ifRoom"
        android:title="@string/maps_show_details_label"/>

    <item
        android:id="@+id/menu_map_satellite"
        android:icon="@drawable/ic_menu_satellite"
        android:title="@string/maps_satellite_view_label"/>

    <item
        android:id="@+id/menu_map"
        android:icon="@drawable/ic_menu_map"
        android:title="@string/maps_map_view_label"/>

</menu>
