<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/dialogBody" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- TITLE -->

        <TextView
            android:id="@+id/login_dialog_title"
            style="@style/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/dialog_sign_in_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <!-- USER NAME -->

        <LinearLayout
            style="@style/dialogTextInputRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/login_dialog_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/dialog_username"
                android:inputType="textEmailAddress" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/ic_username_field"
                tools:ignore="ContentDescription"  />
        </LinearLayout>

        <!-- PASSWORD -->

        <LinearLayout
            style="@style/dialogTextInputRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/login_dialog_password"
                style="@style/dialogPasswordHintStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/dialog_password"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textDirection="locale"  />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/ic_password_field"
                tools:ignore="ContentDescription"  />
        </LinearLayout>

        <!-- STAY SIGNED IN -->

        <CheckBox
            android:id="@+id/login_dialog_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/dialog_stay_signed_in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                style="@style/dialogButtonLeft"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/login_button_cancel"
                android:text="@string/dialog_cancel" />

            <Button
                style="@style/dialogButtonRight"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/login_button_ok"
                android:text="@string/dialog_sign_in" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>