<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/about_main_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_buttons"
            android:layout_alignParentTop="true"
            android:background="@android:color/white"
            android:fillViewport="false" >

            <LinearLayout
                android:id="@+id/about_scroll_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:scrollbars="vertical" >

                <RelativeLayout
                    android:id="@+id/RelativeLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/about_school_logo"
                        style="@style/aboutSchoolLogo"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/about_app_version_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@+id/about_app_version"
                        android:minWidth="80dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="4dp"
                        android:paddingTop="8dp"
                        android:text="@string/about_app_version"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/about_app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:minWidth="50dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="8dp"
                        android:paddingTop="8dp"
                        android:textIsSelectable="true"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/about_server_version_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/about_app_version_label"
                        android:layout_toLeftOf="@+id/about_app_version"
                        android:minWidth="80dp"
                        android:paddingBottom="2dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="4dp"
                        android:paddingTop="2dp"
                        android:text="@string/about_server_version"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/about_server_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/about_app_version"
                        android:minWidth="50dp"
                        android:paddingBottom="3dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="8dp"
                        android:paddingTop="2dp"
                        android:textIsSelectable="true"
                        android:textSize="10sp" />
                </RelativeLayout>

                <TableLayout
                    android:id="@+id/about_contact_table"
                    style="@style/aboutTable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TableRow
                        android:id="@+id/about_phone_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:background="@android:color/white"
                        android:onClick="callContact" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/about_phone_label"
                                style="@style/tableLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_phone" />

                            <TextView
                                android:id="@+id/about_phone_number"
                                style="@style/tableData"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textIsSelectable="false" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/about_phone_link"
                            style="@style/tableIconRight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center_vertical"
                            android:layout_weight="0"
                            android:contentDescription="@string/about_phone_description"
                            android:src="@drawable/ic_device_access_call" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/about_email_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:background="@android:color/white"
                        android:onClick="emailSupport" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/about_email_label"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/label_email"
                                android:textSize="@dimen/table_label_text" />

                            <TextView
                                android:id="@+id/about_email_address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="E-Mail Address Data Goes Here"
                                android:textColor="#666666"
                                android:textSize="@dimen/table_data_text_size" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/about_email_link"
                            style="@style/tableIconRight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center_vertical"
                            android:contentDescription="@string/about_email_description"
                            android:src="@drawable/ic_content_email" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/about_website_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:background="@android:color/white"
                        android:onClick="goToUniversityWebsite" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/about_website_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_website"
                                android:textSize="@dimen/table_label_text" />

                            <TextView
                                android:id="@+id/about_website_url"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Website Url Data Goes Here"
                                android:textColor="#666666" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/about_website_link"
                            style="@style/tableIconRight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center_vertical"
                            android:layout_weight="0"
                            android:contentDescription="@string/about_website_description"
                            android:src="@drawable/ic_location_web_site" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/about_privacy_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:background="@android:color/white"
                        android:onClick="goToUniversityPrivacy" >

                        <TextView
                            android:id="@+id/about_privacy_label"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:text="@string/about_privacy_label"
                            android:textSize="@dimen/table_label_text" />

                        <ImageView
                            style="@style/tableIconRight"
                            android:layout_gravity="right|center_vertical"
                            android:layout_weight="0"
                            android:contentDescription="@string/about_privacy_policy_description"
                            android:src="@drawable/ic_navigation_next_item" />
                    </TableRow>
                </TableLayout>

                <TextView
                    android:id="@+id/about_extra_information"
                    style="@style/aboutExtraInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="false" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottom_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >
			 
             
            <LinearLayout 
                android:id="@+id/about_powered_by_ellucian_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="goToEllucianHome"  >
                
                <TextView
                	android:layout_width="wrap_content"
                	android:layout_height="match_parent"
                	android:text="@string/about_powered_by"
                	android:textSize="12sp"
                	android:textColor="@android:color/white"
                	android:gravity="center_vertical|end"
					android:paddingRight="3dp"
					android:paddingEnd="3dp" />
                
                <ImageView
                    android:layout_width="wrap_content"
                	android:layout_height="match_parent"
                	android:contentDescription="@string/about_powered_by_ellucian"
                	android:gravity="center_vertical|center_horizontal"
                	android:src="@drawable/powered_by_logo" />
            </LinearLayout>

            <Button
                android:id="@+id/about_ellucian_privacy_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="54dip"
                android:onClick="goToEllucianPrivacy"
                android:text="@string/about_ellucian_privacy_policy"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <include layout="@layout/drawer_list" />

</android.support.v4.widget.DrawerLayout>